<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_title"
            android:inputType="text" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginTop="5dp"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/lblDate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:layout_marginEnd="20dp"
	            android:text="@string/lbl_date"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <EditText
	            android:id="@+id/taskDate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:ems="10"
	            android:hint="@string/hint_date"
	            android:inputType="date"
	            android:onClick="showDatePickerDialog" />

	    </LinearLayout>
	        
        <RadioGroup
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@id/lblPriority"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioButton
                android:id="@+id/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@id/low" />

            <RadioButton
                android:id="@+id/med"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@id/med" />

            <RadioButton
                android:id="@+id/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@id/high" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@id/lblStatus"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioButton
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@id/active" />

            <RadioButton
                android:id="@+id/closed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@id/closed" />
        </RadioGroup>

        <EditText
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:minLines="2" />

        <EditText
            android:id="@+id/company"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_company"
            android:inputType="text" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_contact"
            android:inputType="text" />

        <EditText
            android:id="@+id/job"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_job"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:onClick="itemBtnClicked"
        android:text="@string/btn_delete" />

</RelativeLayout>